--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "10.0.1",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "10.0.0",
     "@nestjs/jwt": "10.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "10.0.0",
-    "@prisma/client": "^5.4.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "@prisma/client": "5.4.1",
+    "bull": "4.11.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
