--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
 DATABASE_URL="file:./dev.db"
 
+SECRET="lkajsdhflkajhsdf"
+
 JWT_SECRET="test"
 JWT_EXPIRES_IN="1d"
 
 REDIS_HOST="localhost"
 REDIS_PORT=6379
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_CALLBACK_URL=""
