--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "@nestjs/core": "10.0.0",
     "@nestjs/jwt": "10.1.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "10.0.0",
     "@prisma/client": "5.4.1",
     "bull": "4.11.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
@@ -41,8 +45,10 @@
     "@swc/cli": "0.1.62",
     "@swc/core": "1.3.92",
     "@types/express": "4.17.17",
+    "@types/express-session": "^1.17.8",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.1",
+    "@types/passport-google-oauth20": "^2.0.12",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
